--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,119 +1,80 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>Register - Aeternae</title>
-    <link href="{% static 'dashboard/vendor/css/styles.css' %}" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-            crossorigin="anonymous"></script>
-</head>
-<body class="bg-primary">
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
-        <main>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-7">
-                        <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header">
-                                <h1 class="text-center font-weight-light my-4">Create Account</h1>
-                            </div>
-                            <div class="card-body">
-                                <form method="POST" action="{% url 'accounts:register' %}">
-                                    {% csrf_token %}
-                                    <div class="form-row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="inputFirstName">First Name</label>
-                                                <input class="form-control py-4" id="inputFirstName" type="text"
-                                                       placeholder="Enter first name" name="first_name"
-                                                       value="{{ form.first_name.value|default_if_none:"" }}" required/>
-                                                {% for error in form.first_name.errors %}
-                                                    <p class="text-danger small">{{ error }}</p>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="inputLastName">Last Name</label>
-                                                <input class="form-control py-4" id="inputLastName" type="text"
-                                                       placeholder="Enter last name" name="last_name" value="{{ form.last_name.value|default_if_none:"" }}" required/>
-                                                {% for error in form.last_name.errors %}
-                                                    <p class="text-danger small">{{ error }}</p>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                        <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                               aria-describedby="emailHelp" placeholder="Enter email address"
-                                               name="email" value="{{ form.email.value|default_if_none:"" }}" required/>
-                                        {% for error in form.email.errors %}
-                                            <p class="text-danger small">{{ error }}</p>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="inputPassword">Password</label>
-                                                <input class="form-control py-4" id="inputPassword" type="password"
-                                                       placeholder="Enter password" name="password1" required/>
-                                                {% for error in form.password1.errors %}
-                                                    <p class="text-danger small">{{ error }}</p>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="inputConfirmPassword">Confirm
-                                                    Password</label>
-                                                <input class="form-control py-4" id="inputConfirmPassword"
-                                                       type="password" placeholder="Confirm password" name="password2"
-                                                       required/>
-                                                {% for error in form.password2.errors %}
-                                                    <p class="text-danger small">{{ error }}</p>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group mt-4 mb-0">
-                                        <input class="btn btn-primary btn-block" type="submit" value="Create Account">
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="card-footer text-center">
-                                <div class="small"><a href="login.html">Have an account? Go to login</a></div>
-                            </div>
+{% extends "accounts/base.html" %}
+
+{% block title %}Register{% endblock %}
+
+{% block content %}
+<div class="col-lg-7"> 
+    <div class="card shadow-lg border-0 rounded-lg mt-5">
+        <div class="card-header">
+            <h1 class="text-center font-weight-light my-4">Create Account</h1>
+        </div>
+        <div class="card-body">
+            <form method="POST" action="{% url 'accounts:register' %}">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputFirstName">First Name</label>
+                            <input class="form-control py-4" id="inputFirstName" type="text"
+                                   placeholder="Enter first name" name="first_name"
+                                   value="{{ form.first_name.value|default_if_none:"" }}" required/>
+                            {% for error in form.first_name.errors %}
+                                <p class="text-danger small">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputLastName">Last Name</label>
+                            <input class="form-control py-4" id="inputLastName" type="text"
+                                   placeholder="Enter last name" name="last_name" value="{{ form.last_name.value|default_if_none:"" }}" required/>
+                            {% for error in form.last_name.errors %}
+                                <p class="text-danger small">{{ error }}</p>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
-    </div>
-    <div id="layoutAuthentication_footer">
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid">
-                <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; hoplite.tech  {% now "Y" %}</div>
-                    <div>
-                        <a href="#">Privacy Policy</a>
-                        &middot;
-                        <a href="#">Terms &amp; Conditions</a>
+                <div class="form-group">
+                    <label class="small mb-1" for="inputEmailAddress">Email</label>
+                    <input class="form-control py-4" id="inputEmailAddress" type="email"
+                           aria-describedby="emailHelp" placeholder="Enter email address"
+                           name="email" value="{{ form.email.value|default_if_none:"" }}" required/>
+                    {% for error in form.email.errors %}
+                        <p class="text-danger small">{{ error }}</p>
+                    {% endfor %}
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputPassword">Password</label>
+                            <input class="form-control py-4" id="inputPassword" type="password"
+                                   placeholder="Enter password" name="password1" required/>
+                            {% for error in form.password1.errors %}
+                                <p class="text-danger small">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputConfirmPassword">Confirm
+                                Password</label>
+                            <input class="form-control py-4" id="inputConfirmPassword"
+                                   type="password" placeholder="Confirm password" name="password2"
+                                   required/>
+                            {% for error in form.password2.errors %}
+                                <p class="text-danger small">{{ error }}</p>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+                <div class="form-group mt-4 mb-0">
+                    <input class="btn btn-primary btn-block" type="submit" value="Create Account">
+                </div>
+            </form>
+        </div>
+        <div class="card-footer text-center">
+            <div class="small"><a href="{% url "accounts:login" %}">Have an account? Go to login</a></div>
+        </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="js/scripts.js"></script>
-</body>
-</html>
+{% endblock %}
