--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -16,6 +16,7 @@
 <div id="layoutAuthentication">
     <div id="layoutAuthentication_content">
         <main>
+            {% include "dashboard/components/messages.html" %}
             <div class="container">
                 <div class="row justify-content-center">
                     {% block content %}{% endblock %}    
@@ -41,6 +42,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="js/scripts.js"></script>
+<script src="{% static 'dashboard/vendor/js/scripts.css' %}"></script>
+<script>
+    $('.toast').toast({delay: 3000}).toast('show');
+</script>
 </body>
 </html>
