--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -9,6 +9,7 @@
     <meta name="author" content=""/>
     <title>{% block title %}Accounts{% endblock %} - Aeternae</title>
     <link href="{% static 'dashboard/vendor/css/styles.css' %}" rel="stylesheet"/>
+    <link href="{% static 'accounts/css/custom.css' %}" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
