--- a/pages/static/pages/css/custom.css
+++ b/pages/static/pages/css/custom.css
@@ -1,1 +1,5 @@
 /** Place custom CSS here */
+#mainNav .navbar-nav .nav-item .nav-link.font-size-lg {
+    font-size: 1rem;
+    text-decoration: underline;
+}
