--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -22,6 +22,8 @@
               rel="stylesheet"/>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'pages/vendor/css/styles.css' %}" rel="stylesheet"/>
+        <!-- Custom theme CSS-->
+        <link href="{% static 'pages/css/custom.css' %}" rel="stylesheet"/>
     {% endblock %}
 </head>
 <body id="page-top">
@@ -33,7 +35,7 @@
 
 {% block js %}
     <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
