--- a/pages/templates/pages/components/navbar.html
+++ b/pages/templates/pages/components/navbar.html
@@ -11,6 +11,14 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger font-size-lg"
+                       href="{% url 'accounts:login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger font-size-lg"
+                       href="{% url 'accounts:register' %}">Register</a>
+                </li>
             </ul>
         </div>
     </div>
