Minor improvements: show old email, remember me function

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -22,7 +22,7 @@
                         name="username" attribute  
                     -->
                     <input class="form-control py-4" id="email" type="email" placeholder="Enter email address" required 
-                name="username" />
+                name="username" value="{{ form.username.value|default_if_none:"" }}"/>
                     
                     {% for error in form.username.errors %}
                         <p class="text-danger small">{{ error }}</p>
@@ -38,8 +38,8 @@
                 </div>
                 <div class="form-group">
                     <div class="custom-control custom-checkbox">
-                        <input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" />
-                        <label class="custom-control-label" for="rememberPasswordCheck">Remember password</label>
+                        <input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" name="remember_me" />
+                        <label class="custom-control-label" for="rememberPasswordCheck">Remember Me</label>
                     </div>
                 </div>
                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
