--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -8,10 +8,10 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>{% block title %}Accounts{% endblock %} - Aeternae</title>
-    <link href="{% static 'dashboard/vendor/css/styles.css' %}" rel="stylesheet"/>
-    <link href="{% static 'accounts/css/custom.css' %}" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-            crossorigin="anonymous"></script>
+    {% block css %}
+        <link href="{% static 'dashboard/vendor/css/styles.css' %}" rel="stylesheet"/>
+        <link href="{% static 'accounts/css/custom.css' %}" rel="stylesheet"/>
+    {% endblock %}
 </head>
 <body class="bg-primary">
 <div id="layoutAuthentication">
@@ -20,7 +20,7 @@
             {% include "dashboard/components/messages.html" %}
             <div class="container">
                 <div class="row justify-content-center">
-                    {% block content %}{% endblock %}    
+                    {% block content %}{% endblock %}
                 </div>
             </div>
         </main>
@@ -29,7 +29,7 @@
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; hoplite.tech  {% now "Y" %}</div>
+                    <div class="text-muted">Copyright &copy; hoplite.tech {% now "Y" %}</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
@@ -40,12 +40,14 @@
         </footer>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="{% static 'dashboard/vendor/js/scripts.css' %}"></script>
-<script>
-    $('.toast').toast({delay: 3000}).toast('show');
-</script>
+{% block js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script src="{% static 'dashboard/vendor/js/scripts.js' %}"></script>
+    <script src="{% static 'accounts/js/custom.js' %}"></script>
+{% endblock %}
 </body>
 </html>
