--- a/dashboard/templates/dashboard/components/navbar.html
+++ b/dashboard/templates/dashboard/components/navbar.html
@@ -1,5 +1,5 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Aeternae</a>
+    <a class="navbar-brand" href="{% url 'dashboard:home' %}">Aeternae</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
     </button>
     <!-- Navbar Search-->
@@ -18,9 +18,6 @@
             <a class="nav-link dropdown-toggle" id="user-dropdown" href="#" role="button" data-toggle="dropdown"
                aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-dropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url "accounts:logout" %}">Logout</a>
             </div>
         </li>
