--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -1,63 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>Dashboard - Aeternae</title>
-    <link href="{% static "dashboard/vendor/css/styles.css" %}" rel="stylesheet"/>
-    <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
-          crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-            crossorigin="anonymous"></script>
-</head>
-<body class="sb-nav-fixed">
-{% include "dashboard/components/navbar.html" %}
-<div id="layoutSidenav">
-    {% include "dashboard/components/sidebar.html" %}
+{% extends "dashboard/base.html" %}
 
-    <div id="layoutSidenav_content">
-        {% include "dashboard/components/messages.html" %}
-        <main>
-            <div class="container-fluid">
-                <h1 class="mt-4">Dashboard</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
-                {% include "dashboard/examples/cards.html" %}
-                {% include "dashboard/examples/charts.html" %}
-                {% include "dashboard/examples/data-table.html" %}
-            </div>
-        </main>
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid">
-                <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; hoplite.tech {% now "Y" %} </div>
-                    <div>
-                        <a href="#">Privacy Policy</a>
-                        &middot;
-                        <a href="#">Terms &amp; Conditions</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
-</div>
+{% block title %}Dashboard Home{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-<script src="{% static "dashboard/vendor/js/scripts.js" %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="{% static "dashboard/vendor/assets/demo/chart-area-demo.js" %}"></script>
-<script src="{% static "dashboard/vendor/assets/demo/chart-bar-demo.js" %}"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-<script src="{% static "dashboard/vendor/assets/demo/datatables-demo.js" %}"></script>
-<script>
-    $('.toast').toast({delay: 3000}).toast('show');
-</script>
-</body>
-</html>
+{% block content %}
+    <h1 class="mt-4">Dashboard</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item active">Dashboard</li>
+    </ol>
+    {% include "dashboard/examples/cards.html" %}
+    {% include "dashboard/examples/charts.html" %}
+    {% include "dashboard/examples/data-table.html" %}
+{% endblock %}
