Integrate data tables from API

--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -17,4 +17,5 @@
     {{ block.super }}
     <script src="{% static "dashboard/js/chart-area.js" %}"></script>
     <script src="{% static "dashboard/js/chart-bar.js" %}"></script>
+    <script src="{% static "dashboard/js/datatables.js" %}"></script>
 {% endblock %}
