--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                    <a class="small" href="#">Forgot Password?</a>
+                    <a class="small" href="{% url 'accounts:password-reset' %}">Forgot Password?</a>
                     <input type="submit" class="btn btn-primary" value="Login">
                 </div>
             </form>
