--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -11,8 +11,10 @@
                     <hr class="divider my-4"/>
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Hoplite can help you build better websites using the
-                        Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+                    <p class="text-white-75 font-weight-light mb-5">
+                        Jumpstart your next project with Aeternae, a Django starter template with a front page and full
+                        authentication already setup.
+                    </p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                 </div>
             </div>
@@ -24,12 +26,12 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">We've got what you need!</h2>
+                    <h2 class="text-white mt-0">Just the stuff you need</h2>
                     <hr class="divider light my-4"/>
-                    <p class="text-white-50 mb-4">Hoplite has everything you need to get your new website up and running
-                        in
-                        no time! Choose one of our open source, free to download, and easy to use themes! No strings
-                        attached!</p>
+                    <p class="text-white-50 mb-4">
+                        Most projects start out relatively the same, and you'll dread writing the same components all
+                        the time. With Aeternae, you'll get a solid base with sane defaults that you can easily extend.
+                    </p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -39,35 +41,46 @@
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
-            <h2 class="text-center mt-0">At Your Service</h2>
+            <h2 class="text-center mt-0">Features</h2>
             <hr class="divider my-4"/>
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Sturdy Themes</h3>
-                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                        <i class="fas fa-4x fa-file text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Landing Page</h3>
+                        <p class="text-muted mb-0">
+                            Based on the tried and tested
+                            <a href="https://startbootstrap.com/themes/creative/">Creative</a> theme.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-lock text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Authentication</h3>
+                        <p class="text-muted mb-0">
+                            User registration, login, and password reset included out of the box.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Up to Date</h3>
-                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                        <h3 class="h4 mb-2">Dashboard</h3>
+                        <p class="text-muted mb-0">
+                            Built on top of <a href="https://startbootstrap.com/templates/sb-admin/">SB Admin</a> with
+                            charts and data-tables fetched from our own API.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Ready to Publish</h3>
-                        <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Made with Love</h3>
-                        <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                        <i class="fas fa-4x fa-vial text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Tests</h3>
+                        <p class="text-muted mb-0">
+                            A solid mix of <a href="https://www.selenium.dev/">Selenium</a> feature tests and
+                            <a href="https://docs.djangoproject.com/en/3.1/topics/testing/">Django unit tests</a>.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -146,7 +159,7 @@
     <section class="page-section bg-dark text-white">
         <div class="container text-center">
             <h2 class="mb-4">Free Download at Hoplite!</h2>
-            <a class="btn btn-light btn-xl" href="#">Download Now!</a>
+            <a class="btn btn-light btn-xl" href="https://github.com/alchermd/aeternae/releases">Download Now!</a>
         </div>
     </section>
 
